Algo pequeño de CSS

--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -535,7 +535,7 @@ transition:0.6s;
 /*Centrar los elementos del main dinamicamente*/
 
 .rectangle,
-.slide-slider,
+.carrusel-container,
 #map {
   top: 70%;
   transform: translateY(-50%);
