--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -12,7 +12,7 @@ aside{
   position: fixed;
   z-index: 0;
   left: 0;
-  top: 130px;
+  top: 110px;
 }
 
 .gradiante.alt-colors {
@@ -40,7 +40,7 @@ header{
    justify-content: center; /* Center horizontally */
    align-items: center; /* Center vertically */
    width: 100%;
-  height:130px;
+  height:110px;
   min-height: 90px; 
 
 }
@@ -56,6 +56,7 @@ margin-left: 10px
   margin-left: -110px;
 
 }
+
 .Nav-titulo .navbar-brand {
   margin: 0; /* Reset margin */
   text-align: center; /* Center text */
@@ -223,7 +224,8 @@ ul.dropdown-menu li a {
   flex: 0 0 auto; /* Los elementos no se encogerán y se ajustarán a su contenido */
   min-width: 100px; /* O cualquier tamaño mínimo adecuado */
   scroll-snap-align: start; /* Ayuda a que los elementos se alineen correctamente al hacer scroll */
-  height: calc(15vh/2);
+  height: calc(20vh/2);
+  z-index: 9999 !important;
   margin-left: 5vh;
 }
 
