--- a/UrMaps_2_fase/style.css
+++ b/UrMaps_2_fase/style.css
@@ -203,6 +203,7 @@ ul.dropdown-menu li a {
   width: 90vw; /* Establece el ancho al 90% del viewport width */
   padding: 0;
   margin: 0 auto;
+  margin-top: 30px;
   position: relative; /* Cambiado a relativo para que el z-index funcione */
   display: flex;
   flex-direction: row;
